(PC-26274)[PRO] fix: ui when venue name is too long

--- a/pro/src/pages/Home/Venues/Venue.module.scss
+++ b/pro/src/pages/Home/Venues/Venue.module.scss
@@ -30,10 +30,13 @@
 .venue-name {
   @include fonts.title4;
 
-  cursor: pointer;
   background: none;
   border: none;
   word-break: break-all;
+
+  &-button {
+    cursor: pointer;
+  }
 }
 
 .toggle-icon {
@@ -55,6 +58,7 @@
   display: flex;
   flex-direction: column;
   gap: rem.torem(8px);
+  flex-shrink: 0;
 
   @media (min-width: size.$tablet) {
     flex-direction: row;
